[package]
name = "del_cli"
version = "0.1.0"
authors = ["Wesley Parr <rustchain64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
exitfailure = "0.5.1"
reqwest = { version = "0.10.6", features  = ["json"] }
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114" # derive into structs
tokio = { version = "0.2.21", features  = ["full"] }